White spaces of reserved fixed! and title of ScanQR

--- a/frontend/app-parkingmall/src/assets/styles/components/render_parking.css
+++ b/frontend/app-parkingmall/src/assets/styles/components/render_parking.css
@@ -76,4 +76,8 @@
 .parking .rowArrows img {
   width: 10%;
 }
+
+.switchImg{
+  padding-right: 30%;
+}
 /*# sourceMappingURL=render_parking.css.map */
